--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -178,7 +178,6 @@ input, select, textarea {
 	h1, h2, h3, h4, h5, h6 {
 		color: #ffffff;
 		font-weight: bold;
-		line-height: 1.5;
 		margin: 0 0 0.5em 0;
 	}
 
@@ -1899,7 +1898,9 @@ input, select, textarea {
 		input[type="button"].small,
 		button.small,
 		.button.small {
-			font-size: 0.4em;
+			font-size: 0.5em;
+			background-color: #734eb7;
+			opacity: 0.5;
 		}
 
 		input[type="submit"].large,
@@ -3204,6 +3205,7 @@ input, select, textarea {
 
 	.wrapper {
 		position: relative;
+		min-width: 100%;
 	}
 
 		.wrapper > .inner {
@@ -3494,6 +3496,7 @@ input, select, textarea {
 
 	#sidebar + #wrapper + #footer {
 		margin-left: 18em;
+		height: 100px;
 	}
 
 		@media screen and (max-width: 1280px) {
@@ -3860,6 +3863,9 @@ input, select, textarea {
 							background-image: none;
 							background-color: #b74e91;
 						}
+						.profile-pic {
+							display: none;
+						}
 
 		}
 
@@ -3868,14 +3874,17 @@ input, select, textarea {
 			#sidebar {
 				display: none;
 			}
+			.profile-pic {
+                display: none;
+            }
+        }
 
-		}
 
 /* Intro */
 
 	#intro {
 		background-attachment: fixed;
-		background-image: url("images/intro.svg");
+		background-image: url("images/Back2.jpg");
 		background-position: top right;
 		background-repeat: no-repeat;
 		background-size: 100% 100%;
